Fixed contrast issues, links, picture size and weight

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,12 @@ html {
   color: #222;
   font-size: 1em;
   line-height: 1.4;
+
+  @media (prefers-reduced-motion: no-preference) {
+    html {
+      scroll-behavior: smooth;
+    }
+  }
 }
 
 /*
@@ -329,7 +335,7 @@ header nav ul li {
 }
 
 nav #contact-link {
-  background-color: #CAC691;
+  background-color:  black; 
   padding: 10px 10px;
   border-radius: 30px;
 }
@@ -368,6 +374,12 @@ h4 {
 h4 {
   color: #EEEFDA;
 }
+
+#skills p {
+  color: #000;
+  font-weight: bold;
+}
+
 
 #work h3 {
   width: 100%;
